display process up data

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -52,7 +52,7 @@
             systemCpu.measurements ? systemCpu.measurements[0].value : ""
           }} </span
         >&nbsp;&nbsp;
-        <span><i class="fa fa-clock-o"></i> Up Time: </span>
+        <span><i class="fa fa-clock-o"></i> Up Time: {{ processUpTime }}</span>
       </li>
     </ul>
     <div class="form-inline my-2 my-lg-0">
