--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -56,7 +56,9 @@
       </li>
     </ul>
     <div class="form-inline my-2 my-lg-0">
-      <button class="btn btn-success my-2 my-sm-0">Refresh Data</button>
+      <button class="btn btn-success my-2 my-sm-0" (click)="onRefreshData()">
+        Refresh Data
+      </button>
     </div>
   </div>
 </nav>
