implement export table to excel

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -152,6 +152,7 @@
         type="button"
         class="btn btn-primary btn-sm pull-right"
         style="margin-bottom: 10px"
+        (click)="exportTableToExcel()"
       >
         <i class="fa fa-external-link" aria-hidden="true"></i>
         export to Excel
